--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,7 @@ body{
 }
 .TituloIndex{
     color: blueviolet;
+    text-align: center;
 }
 .contenedorCalculadora{
     width: 300px;
@@ -11,17 +12,23 @@ body{
     background-color: rgb(111, 90, 231);
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    border: 3px solid black;
     border-radius: 20px;
+    box-shadow: 5px 5px 20px 0px;
 }
 .resultado{
-    display: block;
-    background-color: white;
-    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    margin: 10px 0px;
+}
+.pantalla{
+    width: 220px;
+    font-size: larger;
+    height: fit-content;
     text-align: right;
-    margin: 10px 15px 30px 15px;
-    padding-right: 10px;
+    border: 2px solid black;
     border-radius: 10px;
+    padding: 5px;
 }
 .filaSuperior, .filaNumeros, .filaInferior{
     display: flex;
